# fast-graspability-baseline

./: README.md
cpp/: CMakeLists.txt
cpp/include/: Graspability.h
cpp/src/: Graspability.cpp  main.cpp
python/: __init__.py  graspability.py  run_graspability.py
